# simpanman

./: .gitignore  CLAUDE.md  Makefile  README.md  electron-builder.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.electron.config.ts  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: FUTURE_IDEAS.md  Sim Panel Manager - Proposal.docx  TECHNICAL_SPEC.md  UI_REQUIREMENTS.md
docs/superpowers/plans/: 2026-07-02-panel-board-control-editing.md  2026-07-04-staged-build-process-VERIFICATION-TODO.md  2026-07-04-staged-build-process.md
docs/superpowers/skills/: README.md
docs/superpowers/specs/: 2026-07-02-panel-board-control-editing-design.md  2026-07-04-staged-build-process-design.md
electron/: build.mjs  helper.ts  ipc.ts  main.ts  preload.ts  tsconfig.json  updater.ts
electron/engine/: arduinoExport.ts  buttonIndex.ts  commands.ts  emitter.ts  identity.ts  index.ts  model.ts  pins.ts  portMatch.ts  render.ts  templates.ts  types.ts  validation.ts
examples/: README.md  f5e-armament.spm  multi-board-demo.spm
helper/: Cargo.toml
helper/src/: main.rs
server/: Cargo.toml
server/src/: commands.rs  server.rs
server/src/codegen/: button_index.rs  emitter.rs  mod.rs  render.rs
server/src/device/: mod.rs
server/src/model/: migrations.rs  mod.rs  types.rs
server/src/pins/: allocator.rs  mod.rs  profile.rs
server/templates/: board.json.jinja2
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/codegen/: render.rs
src-tauri/src/device/: mod.rs
src-tauri/src/identity/: registry.rs
src-tauri/src/model/: migrations.rs  project.rs  types.rs  validation.rs
src-tauri/src/pins/: profile.rs
src-tauri/templates/: board.json.jinja2  main.cpp.jinja2  platformio.ini.jinja2
src-tauri/tests/: pio_compile.rs
src/components/: ErrorAlert.tsx  Layout.tsx  TabBar.tsx  TitleBar.tsx
src/lib/: api.ts  events.ts  pinRecommendation.test.ts  pinRecommendation.ts  tauri.ts
src/store/: index.ts
src/types/: index.ts
src/views/: BoardsView.tsx  BuildView.tsx  ControlsView.tsx  TestView.tsx
src/views/boards/: PinMapDisplay.tsx
src/views/controls/: ControlForm.tsx  SelectorPositionsEditor.tsx  columns.tsx
tests/e2e/: app-startup.spec.ts  boards-editing.spec.ts  boards-view.spec.ts  build-view.spec.ts  controls-editing.spec.ts  controls-view.spec.ts  panels-editing.spec.ts  project-editing-journey.spec.ts  project-new.spec.ts  project-open-f5e.spec.ts  project-open-multi-board.spec.ts  project-save.spec.ts  tab-navigation.spec.ts
tests/e2e/helpers/: mock-api.ts  project-fixtures.ts
tests/electron/: pio-compile.spec.ts  smoke.spec.ts
tests/engine/: arduinoExport.test.ts  codegen.test.ts  commands.test.ts  emitter.test.ts  fixtures.ts  identity.test.ts  pins.test.ts  portMatch.test.ts  validation.test.ts
tests/engine/__snapshots__/: codegen.test.ts.snap
