[package]
name = "simpanman"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "simpanman_lib"
crate-type = ["rlib"]

[[bin]]
name = "simpanman"
path = "src/main.rs"

[dependencies]
# Local HTTP + WebSocket server (replaces the Tauri webview/IPC layer)
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
webbrowser = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
minijinja = { version = "2", features = ["loader"] }
rust-embed = "8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "net", "time"] }
anyhow = "1"
thiserror = "1"
serialport = "4"
log = "0.4"
env_logger = "0.11"
tempfile = "3"

# Phase 3: HID device reader (opt-in feature)
hidapi = { version = "2", optional = true }

[features]
default = []
hid = ["dep:hidapi"]

[dev-dependencies]
insta = { version = "1", features = ["json"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
