[package]
name = "simpanman"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "simpanman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
minijinja = { version = "2", features = ["loader"] }
rust-embed = "8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serialport = "4"
log = "0.4"
env_logger = "0.11"
tempfile = "3"

# Phase 3: HID device reader (opt-in feature)
hidapi = { version = "2", optional = true }

[features]
default = []
hid = ["dep:hidapi"]
custom-protocol = ["tauri/custom-protocol"]



[dev-dependencies]
insta = { version = "1", features = ["json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
